<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity" >

    <requestFocus
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="225dp"
        android:layout_marginTop="81dp" />

    <requestFocus
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="2000dp"
            android:gravity="top"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewAbout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_text" />

            <Button
                android:id="@+id/buttonHomepage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onWebsiteClick"
                android:tag="http://lf-net.org/RC-Control.html"
                android:text="@string/button_homepage" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/buttonPlayStore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:onClick="onWebsiteClick"
                    android:tag="https://play.google.com/store/apps/details?id=org.lf_net.rc_control"
                    android:text="@string/button_playStore" />

                <Button
                    android:id="@+id/buttonGooglePlus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:onClick="onWebsiteClick"
                    android:tag="https://plus.google.com/u/0/112186518187827698634/posts"
                    android:text="@string/button_googlePlus" />

                <Button
                    android:id="@+id/buttonTwitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:onClick="onWebsiteClick"
                    android:tag="https://www.twitter.com/moritzgrosch"
                    android:text="@string/button_twitter" />

                <Button
                    android:id="@+id/buttonFacebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:onClick="onWebsiteClick"
                    android:tag="https://www.facebook.com/moritzgrosch"
                    android:text="@string/button_facebook" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>